# megaton-hammer

./: Cargo.toml  README.md  Xargo.toml  aarch64-roblabla-switch.json  build.rs  link.T  load.meph
megaton-allocator/: Cargo.toml
megaton-allocator/src/: lib.rs
megaton-crt0/: Cargo.toml  build.rs  test2.py
megaton-crt0/src/: lib.rs  relocation.rs  util.rs
megaton-example/: Cargo.toml  aarch64-roblabla-switch.json  test.py
megaton-example/src/: main.rs
megaton-hammer/: Cargo.toml  build.rs
megaton-hammer/src/: error.rs  lib.rs  log_impl.rs  tls.rs  utils.rs
megaton-hammer/src/allocator/: mod.rs
megaton-hammer/src/ipc/: ll.rs  mod.rs  nn.rs
megaton-hammer/src/ipcdefs/: mod.rs
megaton-hammer/src/ipcdefs/nn/: mod.rs
megaton-hammer/src/ipcdefs/twili/: impl_i_pipe.rs  impl_i_twili_service.rs  impl_ihbabi_shim.rs  mod.rs
megaton-hammer/src/kernel/: mod.rs  session.rs  svc.rs  sync.rs
megaton-hammer/src/loader/: mod.rs
megaton-hammer/src/loader/crt0/: mod.rs  relocation.rs
megaton-ipc/: Cargo.toml
megaton-ipc/src/: lib.rs
megaton-ipc/src/nn/: mod.rs
megaton-ipc/src/nn/account/: impl_IAccountServiceForAdministrator.rs  impl_IAccountServiceForApplication.rs  impl_IAccountServiceForSystemService.rs  impl_IBaasAccessTokenAccessor.rs  impl_i_account_service_for_administrator.rs  impl_i_account_service_for_application.rs  impl_i_account_service_for_system_service.rs  impl_i_baas_access_token_accessor.rs  mod.rs
megaton-ipc/src/nn/ahid/: impl_ICtrlSession.rs  impl_IReadSession.rs  impl_IServerSession.rs  impl_i_ctrl_session.rs  impl_i_read_session.rs  impl_i_server_session.rs  mod.rs
megaton-ipc/src/nn/am/: mod.rs
megaton-ipc/src/nn/apm/: impl_IManager.rs  impl_IManagerPrivileged.rs  impl_ISession.rs  impl_ISystemManager.rs  impl_i_manager.rs  impl_i_manager_privileged.rs  impl_i_session.rs  impl_i_system_manager.rs  mod.rs
megaton-ipc/src/nn/bgtc/: impl_IStateControlService.rs  impl_ITaskService.rs  impl_i_state_control_service.rs  impl_i_task_service.rs  mod.rs
megaton-ipc/src/nn/bluetooth/: impl_IBluetoothDriver.rs  impl_i_bluetooth_driver.rs  mod.rs
megaton-ipc/src/nn/bpc/: impl_IBoardPowerControlManager.rs  impl_IRtcManager.rs  impl_i_board_power_control_manager.rs  impl_i_rtc_manager.rs  mod.rs
megaton-ipc/src/nn/btm/: impl_IBtm.rs  impl_IBtmDebug.rs  impl_IBtmSystem.rs  impl_IBtmSystemCore.rs  impl_i_btm.rs  impl_i_btm_debug.rs  impl_i_btm_system.rs  impl_i_btm_system_core.rs  mod.rs
megaton-ipc/src/nn/capsrv/: mod.rs
megaton-ipc/src/nn/cec/: impl_ICecManager.rs  impl_i_cec_manager.rs  mod.rs
megaton-ipc/src/nn/err/: mod.rs
megaton-ipc/src/nn/es/: impl_IETicketService.rs  impl_ie_ticket_service.rs  mod.rs
megaton-ipc/src/nn/fatalsrv/: impl_IPrivateService.rs  impl_IService.rs  impl_i_private_service.rs  impl_i_service.rs  mod.rs
megaton-ipc/src/nn/fgm/: mod.rs
megaton-ipc/src/nn/friends/: mod.rs
megaton-ipc/src/nn/gpio/: impl_IManager.rs  impl_IPadSession.rs  impl_i_manager.rs  impl_i_pad_session.rs  mod.rs
megaton-ipc/src/nn/grcsrv/: impl_i_grc_service.rs
megaton-ipc/src/nn/hid/: impl_IActiveVibrationDeviceList.rs  impl_IAppletResource.rs  impl_IHidDebugServer.rs  impl_IHidServer.rs  impl_IHidSystemServer.rs  impl_IHidTemporaryServer.rs  impl_i_active_vibration_device_list.rs  impl_i_applet_resource.rs  impl_i_hid_debug_server.rs  impl_i_hid_server.rs  impl_i_hid_system_server.rs  impl_i_hid_temporary_server.rs  mod.rs
megaton-ipc/src/nn/i2c/: impl_IManager.rs  impl_ISession.rs  impl_i_manager.rs  impl_i_session.rs
megaton-ipc/src/nn/irsensor/: impl_IIrSensorServer.rs  impl_IIrSensorSystemServer.rs  impl_i_ir_sensor_server.rs  impl_i_ir_sensor_system_server.rs  mod.rs
megaton-ipc/src/nn/lm/: impl_ILogService.rs  impl_ILogger.rs  impl_i_log_service.rs  impl_i_logger.rs  mod.rs
megaton-ipc/src/nn/lr/: impl_IAddOnContentLocationResolver.rs  impl_ILocationResolver.rs  impl_ILocationResolverManager.rs  impl_IRegisteredLocationResolver.rs  impl_i_add_on_content_location_resolver.rs  impl_i_location_resolver.rs  impl_i_location_resolver_manager.rs  impl_i_registered_location_resolver.rs  mod.rs
megaton-ipc/src/nn/mii/: mod.rs
megaton-ipc/src/nn/mmnv/: impl_IRequest.rs  impl_i_request.rs  mod.rs
megaton-ipc/src/nn/ncm/: impl_IContentManager.rs  impl_IContentMetaDatabase.rs  impl_IContentStorage.rs  impl_i_content_manager.rs  impl_i_content_meta_database.rs  impl_i_content_storage.rs  mod.rs
megaton-ipc/src/nn/nfc/: mod.rs
megaton-ipc/src/nn/nifm/: mod.rs
megaton-ipc/src/nn/npns/: impl_INpnsSystem.rs  impl_INpnsUser.rs  impl_i_npns_system.rs  impl_i_npns_user.rs  mod.rs
megaton-ipc/src/nn/ns/: mod.rs
megaton-ipc/src/nn/ovln/: impl_IReceiver.rs  impl_IReceiverService.rs  impl_ISender.rs  mod.rs  (+5 more)
megaton-ipc/src/nns/: mod.rs
megaton-ipc/src/nv/: mod.rs
(+1033 files in other folders)
