[package]
authors = ["roblabla <unfiltered@roblab.la>"]
name = "megaton-hammer"
version = "0.1.0"

[build-dependencies]
cc = "1.0.4"

[dependencies]
cty = "0.1.5"
static_assertions = "0.2.5"

[dependencies.arrayvec]
version = "0.4.7"
default-features = false

[dependencies.bitfield-register]
path = "../bitfield-register/bitfield-register"

[dependencies.bitfield-register-macro]
path = "../bitfield-register/bitfield-register-macro"

[dependencies.byteorder]
default-features = false
version = "1.2.1"

[dependencies.failure]
default-features = false
version = "0.1.1"

[dependencies.failure_derive]
default-features = false
version = "0.1.1"

[features]
emulation_test = ["std"]
std = []
