[package]
authors = ["roblabla <unfiltered@roblab.la>"]
name = "megaton-allocator"
version = "0.1.0"

[dependencies]
spin = { version = "0.4.6" }
bit_field = "0.9.0"
megaton-hammer = { path = "../megaton-hammer" }

# Last version before GlobalAlloc, should update at some point.
linked_list_allocator = "0.5.0"
