[package]
name = "megaton-example"
version = "0.1.0"
authors = ["roblabla <unfiltered@roblab.la>"]

[dependencies]
megaton-hammer = { path = "../megaton-hammer"  }
megaton-ipc = { path = "../megaton-ipc" }
byteorder = "1.2.1"
image = { version = "0.18.0", default-features = false, features = ["png_codec"] }
math = { path = "../../math.rs" }
