[package]
authors = ["roblabla <unfiltered@roblab.la>"]
name = "megaton-hammer"
version = "0.1.0"

[dependencies]
cty = "0.1.5"
static_assertions = "0.2.5"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"], optional = true }
core_io = { version = "0.1.20180307" }
spin = { version = "0.4.6" }
bit_field = "0.9.0"

[dependencies.arrayvec]
version = "0.4.7"
default-features = false

[dependencies.byteorder]
default-features = false
version = "1.2.1"

[dependencies.failure]
default-features = false
version = "0.1.1"

[features]
crt0 = ["compiler_builtins"]
std = []
